# nlp_building_blocks

./: .gitignore  README.md
2312_model_explorer/: .gitignore  README.md  main_app.py  requirements.txt  seq_clf.md
TIF/: 240226.md  240227.md  240228.md  240229.md  240303.md  240304.md  240305.md  240307.md  240308.md  240309.md  240311.md  240312.md  240314.md  240315.md  240319.md  240322.md  240323.md  240327.md  240328.md  240403.md  240409.md  240410.md  240411.md  240412.md  240415.md  240506.md  240509.md  240625.md  240814.md  240821.md  240824.md  240828.md  240829.md  240908.md  240912.md  240913.md  README.md
analysis/: README.md  eda.md  eda_sentiment.ipynb  eda_text_statistics.ipynb  srl.md  topic_modeling.md
augmentation/: README.md
evaluation/: README.md  bleu.ipynb  bleu.md  rouge.ipynb  rouge.md
korean/: transformer.md
korean_resources/: README.md  preprocessing.md
preprocessing/: README.md  normalization.md  tokenize_nltk_examples.ipynb  tokenizer.md  tokenizer_huggingface.md
projects/: README.md
projects/2024_11_arxiver_rag/database/api/: Dockerfile  build.sh  pyproject.toml  start.sh
projects/2024_11_arxiver_rag/database/api/src/: config.py  main.py
projects/2024_11_arxiver_rag/database/api/src/core/: data.py  database.py  db_models.py  errors.py  filters.py  logger.py  orders.py
projects/2024_11_arxiver_rag/database/api/src/core/dto/: response.py
projects/2024_11_arxiver_rag/database/api/src/paper/: data.py  database.py  db_models.py  properties.py  routes.py
representations/: word_embedding.md
study_resources/: README.md
(+606 files in other folders)
