[tool.poetry]
name = "arxiver-db-api"
version = "0.1.0"
description = ""
authors = [
    "id4thomas <id2thomas@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
SQLAlchemy = "^2.0.36"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"